update openapi to v3
